finished index html page for extension

--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>
-        Hello
-    </h1>
+    <h1>Shorten</h1>
+    <form id="url-form">
+        <input id="input_url" type="url" placeholder="Enter your url">
+        <button>Shorten</button>
+    </form>
+    <div id="links">
+        <p id="long-url">
+
+        </p>
+        <p id="short-url">
+
+        </p>
+        <p id="error">
+
+        </p>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
